# Autonomous-mobile-robotic-programming-assigments

./: README.md
PA_1_Kesseler_Camille_2022_10_14/: Base_graph.h  CMakeLists.txt  Complex_graph.h  Problem1.cpp  Problem2.cpp  Problem3.cpp  Problem4.cpp  Problem5.cpp  drawing_GT_IN.cpp  drawing_GT_OPTI.cpp
PA_1_Kesseler_Camille_2022_10_14/VictoriaPark_Data/: ISAM2_INIT_GUESS_victoriaPark_lm.txt  My_result_VP.txt  My_result_VP_lm.txt
PA_2_kesseler_camille_2022_11_13/PA_2/: CMakeLists.txt  Complex_g2o.cpp  Pose_estimation_ceres.cpp  Pose_estimation_g2o.cpp  Pose_estimation_loop_ceres.cpp  Pose_estimation_loop_g2o.cpp  drawing_GT.cpp  se2.h
PA_2_kesseler_camille_2022_11_13/PA_2/VictoriaPark_Data/: ISAM2_INIT_GUESS_victoriaPark.txt  My_result_VP.txt  My_result_VP_lm.txt  mh_T2_victoriaPark_01.txt
PA_3_Kesseler_Camille_2022_11_24/: CMakeLists.txt  Epipolar_geometry.cpp  ORB_feature.cpp
PA_4_kesseler_camille_2022_12_15/EKF_SLAM/: CMakeLists.txt  README.md
PA_4_kesseler_camille_2022_12_15/EKF_SLAM/data/: README.md
PA_4_kesseler_camille_2022_12_15/EKF_SLAM/include/: Common.h  EKFSLAM.h  Map.h  Measurement.h
PA_4_kesseler_camille_2022_12_15/EKF_SLAM/plot/: show.py
PA_4_kesseler_camille_2022_12_15/EKF_SLAM/src/: CMakeLists.txt  EKFSLAM.cpp  Map.cpp  Measurement.cpp  main.cpp
PA_5_kesseler_camille_2022_12_29/BA/: CMakeLists.txt  README.md
PA_5_kesseler_camille_2022_12_29/BA/data/data_gnd/: camera_poses.csv  keypoints.csv
PA_5_kesseler_camille_2022_12_29/BA/data/data_noisy/: camera.csv  camera_poses.csv  keypoints.csv  point_ids.csv  points.csv
PA_5_kesseler_camille_2022_12_29/BA/data/data_opti/: RMSE.csv  camera_poses.csv  points.csv
PA_5_kesseler_camille_2022_12_29/BA/include/: Common.h  Feature.h  Frame.h  MapPoint.h  ProjectionFactor.h  Reader.h
PA_5_kesseler_camille_2022_12_29/BA/plot/: Draw
PA_5_kesseler_camille_2022_12_29/BA/src/: CMakeLists.txt  Feature.cpp  Frame.cpp  MapPoint.cpp  Reader.cpp  main.cpp
